# OpenGL

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
src/: Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp  fs_helpers.hpp  glad.c  main.cpp
src/Model/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Texture.hpp
src/Utility/: Input.cpp  Input.hpp  fs_helpers.cpp
src/resources/models/backpack/: backpack.mtl
src/resources/models/yoda/: yoda.mtl
src/resources/shaders/: default.frag  default.vert  test.frag  test.vert
